--- a/css/reset.css
+++ b/css/reset.css
@@ -1,5 +1,13 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital@0;1&display=swap');
+@font-face {
+    font-family: 'Chosunilbo_myungjo';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Chosunilbo_myungjo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html,body{width:100%;height:100%;}
 
 /* 여백 초기화 */
@@ -9,7 +17,7 @@ body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,select,tabl
 a {color: #222; text-decoration: none;}
 
 /* 폰트 초기화 */
-body, input, textarea, select, button, table {font-family: 'Bodoni Moda', serif, 'Chosunilbo_myungjo', sans-serif; color: #222; font-size: 16px; line-height: 1;}
+body, input, textarea, select, button, table {font-family: 'Bodoni Moda', 'Chosunilbo_myungjo', sans-serif; color: #222; font-size: 16px; line-height: 1;}
 
 /* 폰트 스타일 초기화 */
 em,address {font-style: normal;}
