--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,153 @@
 :root{font-size: 10px;}
 
 /* layout */
-body{box-sizing: border-box;}
+body{box-sizing: border-box; background: #fff; color: #000; transition: .5s ease-in;position: relative;}
+body.on{background: #000; color: #fff;}
 .container{width: 100%; height: 100%; box-sizing: border-box; overflow: hidden;}
 .italic{font-style: italic;}
 .title{text-transform: uppercase;}
 
 /* header */
-#cover{height: 120vh; background: #fff;}
+#cover{height: 120vh;}
 #cover .container{padding: 4% 7% 15%;}
 
-#cover .titles{width: 100%; height: 80%; margin-bottom: 5%;}
+#cover .titles{width: 100%; height: 80%; padding-bottom: 5%;}
+#cover .titles:hover{animation: ani1 1s ease-in forwards;}
+@keyframes ani1 {
+    0%{opacity: 1;}
+    50%{opacity: 0.5;}
+    100%{opacity: 1;}
+}
 #cover .titles h1{font-size: 20rem; text-transform: uppercase; line-height: 0.9;}
 
-#cover .title1{background: url(../img/star03.svg) no-repeat 94% 40% / 8%;}
-#cover .title2{text-align: right; background: url(../img/star02.svg) no-repeat 6% 70% / 7%;}
-#cover .title3{padding-top: 80px; background: url(../img/star01.svg) no-repeat 98% 100% / 6%}
+#cover .title1{background: url(../img/svg/star03.svg) no-repeat 94% 40% / 8%;}
+#cover .title2{text-align: right; background: url(../img/svg/star02.svg) no-repeat 6% 70% / 7%;}
+#cover .title3{padding-top: 8rem; background: url(../img/svg/star01.svg) no-repeat 98% 100% / 6%}
 #cover .title3 .border{font-size: 24rem; color: #fff; text-shadow: -1px 0 2px #000, 0 1px 2px #000, 1px 0 2px #000, 0 -1px 2px #000; text-align: center; position: relative; width: max-content; margin: 0 auto;}
 #cover .title3 .border:after{content: "lee jieun"; text-shadow: none; position: absolute; top: -1.8rem; left: -2.2%; color: #000;}
 
 
 #cover .header{display: flex; justify-content: space-between; align-items: center; width: 100%; height: 15%; font-size: 3.5rem;}
-#cover .header .project-btn,.contact-btn{height: 70%; background: url(../img/Ellipse1.svg) no-repeat center center/98%}
+#cover .header .project-btn,.contact-btn{height: 70%; background: url(../img/svg/Ellipse1.svg) no-repeat center center/98%}
 #cover .header a{line-height: 275%;}
 
 
 /* about */
-#about{background: #fff; height: 150vh;}
-#about .container{padding: 7% 7% 15%;}
+#about{height: 150vh;}
+#about .container{padding: 3% 7% 15%;}
 
-#about .title{}
-#about .title h2{font-size: 20rem; text-transform: uppercase; line-height: 0.9;}
+#about .title{width: 100%; height: 40%; position: relative;}
+#about .title h2{font-size: 20rem; text-transform: uppercase; line-height: 0.9; position: absolute; right: -100%;}
+#about .title .tit-t{top: 0;}
+#about .title .tit-b{top: 18rem;}
+
+
+#about .info{display: flex; justify-content: space-between; height: 20%; font-size: 3rem; margin-top: 5%;}
+#about .info ul{width: 47%;}
+#about .info ul li{height: 25%; line-height: 2.5; position: relative;}
+#about .info ul li img{width: 4.2%; position: absolute; top: 35%; left: 1%;}
+#about .info ul li:hover img{transform: rotateY(180deg); transition: .5s ease-in-out;}
+
+#about .info-l li:not(:last-child){border-bottom: 1px solid #000;}
+#about .info-l li{display: flex; justify-content: space-between; letter-spacing: 1px; padding-left: 7%;}
+
+#about .info-r li:not(:nth-child(2n)){padding-left: 7%;}
+#about .info-r .right{text-align: right; border-top: 1px solid #000;}
+
+
+
 
 
 
 /* main */
-#main{height: 500vh; position: relative;}
-main.on{background: #000; transition: .5s ease-in;}
+#main{height: 600vh; position: relative;}
 #main .container{padding: 3% 7%;}
-#main .scroll{width: 1px; height: 100%; background: #ddd; position: absolute; top: 0; left: 5%;}
+#main .scroll{width: 0.1rem; height: 100%; background: #ddd; position: absolute; top: 0; left: 5%; opacity: 0; transition: .5s ease-in-out;}
+#main .scroll.on{opacity: 1;}
 
-#project{float: right; width: 95%; height: 100vh; position: relative;}
-#project .pj-info{display: flex; justify-content: space-between; width: 100%; height: 3rem; font-size: 2.4rem; padding: 1rem 0.5rem; border-top: 1px solid #ddd; color: #fff;}
+#project{float: right; width: 95%; height: 120vh; position: relative;}
+#project .pj-wrap{width: 100%; height: 80%; padding: 10% 0;}
+
+#project .pj-info{display: flex; justify-content: space-between; width: 100%; height: 3rem; font-size: 2.4rem; padding: 1rem 0.5rem; border-top: 1px solid #ddd; color: inherit; opacity: 0;}
+#project .pj-info.on{opacity: 1; transition: 1s ease-in;}
 
 #project .pj-main{width: 100%; height: 100%; overflow: hidden;}
+#project .pj-main.on{animation: ani2 1s ease-in-out forwards;}
+@keyframes ani2 {
+    0%{transform: translateY(100rem); opacity: 0;}
+    100%{transform: translateY(0); opacity: 1;}
+}
 
-#project .pj-planet .pj-link{width: 60rem; height: 60rem; background: rgba(255,255,255,0.5); border-radius: 100%; position: absolute; top: 50%; right: 12%; transform: translateY(-50%); overflow: hidden;}
-#project .pj-planet .pj-link:hover{background: rgba(255,255,255,0); transition: 0.3s ease-in-out;}
+#project .pj-planet{width: 100%; height: 100%; background: url(../img/svg/ring.svg) no-repeat 105% 50% / 67%;} 
+#project .pj-planet .pj-link{width: 60rem; height: 60rem; position: absolute; top: 50%; right: 12%; transform: translateY(-50%);}
+#project .pj-planet .pj-link:after{content: ""; width: 80rem; height: 80rem;}
+#project .pj-planet .pj-link a{display: block; width: 100%; height: 100%; border-radius: 100%; transform: scale(0.1); filter: grayscale(100%); opacity: 0.4; overflow: hidden;}
+#project .pj-planet .pj-link a.on{transform: scale(1); transition: 1.5s ease-in-out;}
+#project .pj-planet .pj-link a:hover{filter: grayscale(0); opacity: 0.9; transition: 0.5s;}
+
+
 
 #project .pj-title{position: absolute; top: 45%; left: 0;}
-#project .pj-title .title{font-size: 15rem; color: #fff; line-height: 1.5; position: relative; padding-left: 8rem;}
+#project .pj-title .title{font-size: 15rem; color: inherit; line-height: 1.5; position: relative; padding-left: 8rem;}
 #project .project1 .pj-title .title{letter-spacing: -0.5rem;}
 #project .project2 .pj-title .title{letter-spacing: 0.5rem;}
 #project .pj-title .title .num{font-size: 2.4rem; letter-spacing: -0.2rem; position: absolute; top: 5rem; left: 0;}
-#project .pj-title .sub{font-size: 1.8rem; color: #fff; line-height: 2.0; position: relative; margin-left: 15.5rem;}
+#project .pj-title .sub{font-size: 1.8rem; color: inherit; line-height: 2.0; position: relative; margin-left: 15.5rem;}
 #project .pj-title .sub::before{content: ""; display: inline-block; width: 5rem; height: 0.1rem; background: #ddd; position: absolute; top: 50%; left: -7rem; transform: translateY(-50%);}
+
+
+
+
+/* media screen */
+@media screen and (max-width: 1620px) {
+    #cover .titles h1{font-size: 18rem;}
+    #cover .title3 .border{font-size: 22rem;}
+}
+
+@media screen and (max-width: 1500px) {
+    #cover .container{padding: 7% 7% 20%;}
+    #cover .titles h1{font-size: 16rem;}
+    #cover .title3 .border{font-size: 19rem;}
+}
+
+@media screen and (max-width: 1300px) {
+    #cover .container{padding: 10% 7% 25%;}
+    #cover .titles h1{font-size: 14rem;}
+    #cover .title3 .border{font-size: 17rem;}
+    #cover .header{font-size: 2.8rem;}
+}
+
+@media screen and (max-width: 1150px) {
+    #cover .container{padding: 12% 7% 30%;}
+    #cover .title1, #cover .title2, #cover .title3{background: none;}
+}
+
+@media screen and (max-width: 1000px) {
+    #cover .titles h1{font-size: 12rem;}
+    #cover .title3 .border{font-size: 15rem;}
+    #cover .header{font-size: 2.5rem;}
+    #cover .header .project-btn, .contact-btn{height: 58%;}
+}
+
+@media screen and (max-width: 855px) {
+    #cover .container{padding: 17% 7% 40%;}
+    #cover .titles h1{font-size: 10rem;}
+    #cover .title3 .border{font-size: 13rem;}
+    #cover .header .project-btn, .contact-btn{height: 58%;}
+}
+
+@media screen and (max-width: 720px) {
+    #cover .container{padding: 20% 3% 15%; background: url(../img/svg/star01.svg) no-repeat 85% 8%;}
+    #cover .titles{height: 60%; padding-top: 7%; padding-bottom: 10%;}
+    #cover .titles h1{line-height: 1.5;}
+    #cover .title1, #cover .title2, #cover .title3{transform: rotate(40deg);  text-align: center;}
+    #cover .title3{padding-top: 2rem;}
+    #cover .title3 .border{font-size: 11rem;}
+    #cover .header{width: 35%; height: auto; margin: 0 auto; flex-wrap: wrap; justify-content: space-around;}
+}
+
+@media screen and (max-width: 655px) {
+    #cover .container{padding: 25% 3% 30%; background-size: 18%;}
+    #cover .titles h1{font-size: 8rem;}
+    #cover .title3 .border{font-size: 9rem;}
+}
