--- a/css/reset.css
+++ b/css/reset.css
@@ -26,7 +26,7 @@ em,address {font-style: normal;}
 ul,li,ol {list-style:none;}
 
 /* 제목 태그 초기화 */
-h1,h2,h3,h4,h5,h6 {font-size: 13px; font-weight: normal;}
+h1,h2,h3,h4,h5,h6 {font-weight: normal;}
 
 /* 테두리 초기화 */
 img,fieldset {border:0 none;}
