--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 :root{font-size: 10px;}
+*{box-sizing: border-box;}
 
 /* layout */
-body{box-sizing: border-box; background: #fff; color: #000; transition: .5s ease-in;position: relative;}
+body{background: #fff; color: #000; transition: .5s ease-in;position: relative; min-width: 340px;}
 body.on{background: #000; color: #fff;}
 .container{width: 100%; height: 100%; box-sizing: border-box; overflow: hidden;}
 .italic{font-style: italic;}
@@ -10,9 +11,9 @@ body.on{background: #000; color: #fff;}
 
 /* header */
 #cover{height: 120vh;}
-#cover .container{padding: 4% 7% 15%;}
+#cover .container{padding: 4% 7% 13%;}
 
-#cover .titles{width: 100%; height: 80%; padding-bottom: 5%;}
+#cover .titles{width: 100%; height: 85%; padding-bottom: 5%;}
 #cover .titles:hover{animation: ani1 1s ease-in forwards;}
 @keyframes ani1 {
     0%{opacity: 1;}
@@ -34,8 +35,8 @@ body.on{background: #000; color: #fff;}
 
 
 /* about */
-#about{height: 150vh;}
-#about .container{padding: 3% 7% 15%;}
+#about{height: 120vh;}
+#about .container{padding: 3% 7% 0%;}
 
 #about .title{width: 100%; height: 40%; position: relative;}
 #about .title h2{font-size: 20rem; text-transform: uppercase; line-height: 0.9; position: absolute; right: -100%;}
@@ -43,7 +44,7 @@ body.on{background: #000; color: #fff;}
 #about .title .tit-b{top: 18rem;}
 
 
-#about .info{display: flex; justify-content: space-between; height: 20%; font-size: 3rem; margin-top: 5%;}
+#about .info{display: flex; justify-content: space-between; height: 22%; font-size: 3rem; margin-top: 5%;}
 #about .info ul{width: 47%;}
 #about .info ul li{height: 25%; line-height: 2.5; position: relative;}
 #about .info ul li>img{width: 4.2%; position: absolute; top: 35%; left: 1%;}
@@ -57,7 +58,6 @@ body.on{background: #000; color: #fff;}
 #about .info-r li:first-child{padding-left: 7%; border-bottom: 1px solid #000;}
 #about .info-r li span{display: inline-block; flex: 1;}
 #about .info-r li span img{width: 22%; height: 50%;}
-/* #about .info-r li:not(:nth-child(2n)){padding-left: 7%;} */
 
 
 /* main */
@@ -67,7 +67,7 @@ body.on{background: #000; color: #fff;}
 #main .scroll.on{opacity: 1;}
 
 #project{float: right; width: 95%; height: 120vh; position: relative;}
-#project .pj-wrap{width: 100%; height: 80%; padding: 10% 0;}
+#project .pj-wrap{width: 100%; height: 80%; padding: 8% 0;}
 
 #project .pj-info{display: flex; justify-content: space-between; width: 100%; height: 3rem; font-size: 2.4rem; padding: 1rem 0.5rem; border-top: 1px solid #ddd; color: inherit; opacity: 0;}
 #project .pj-info.on{opacity: 1; transition: 1s ease-in;}
@@ -79,7 +79,7 @@ body.on{background: #000; color: #fff;}
     100%{transform: translateY(0); opacity: 1;}
 }
 
-#project .pj-planet{width: 100%; height: 100%; background: url(../img/svg/ring.svg) no-repeat 105% 50% / 67%;} 
+#project .pj-planet{width: 100%; height: 100%; background: url(../img/svg/ring.svg) no-repeat 105% 50% / 68%;} 
 #project .pj-planet .pj-link{width: 60rem; height: 60rem; position: absolute; top: 50%; right: 12%; transform: translateY(-50%);}
 #project .pj-planet .pj-link:after{content: ""; width: 80rem; height: 80rem;}
 #project .pj-planet .pj-link a{display: block; width: 100%; height: 100%; border-radius: 100%; transform: scale(0.1); filter: grayscale(100%); opacity: 0.4; overflow: hidden;}
@@ -93,6 +93,7 @@ body.on{background: #000; color: #fff;}
 #project .pj-title .title .num{font-size: 2.4rem; letter-spacing: -0.2rem; position: absolute; top: 5rem; left: 0;}
 #project .pj-title .sub{font-size: 1.8rem; color: inherit; line-height: 2.0; position: relative; margin-left: 15.5rem;}
 #project .pj-title .sub::before{content: ""; display: inline-block; width: 5rem; height: 0.1rem; background: #ddd; position: absolute; top: 50%; left: -7rem; transform: translateY(-50%);}
+#project .pj-title .sub .bar{display: none; width: 5%; height: 0.1rem; background: #ddd; margin-right: 2%;}
 
 
 /* contact */
@@ -100,12 +101,12 @@ body.on{background: #000; color: #fff;}
 #contact .container{padding: 10% 7%; position: relative;}
 #contact a{color: inherit;}
 
-#contact .contact{font-size: 15rem; background: #000; color: #fff; text-align: right; text-transform: uppercase; padding: 0 1% 0 30%; transform: rotate(-5deg); position: absolute; top: 25%; left: -100%;}
+#contact .contact{font-size: 15rem; background: #000; color: #fff; text-align: right; text-transform: uppercase; padding: 0 1% 0 30%; transform: rotate(-5deg); position: absolute; top: 20%; left: -105%;}
 
-#contact .con-infos{background: #000; color: #fff; padding: 0.5% 45% 0.5% 2%; transform: rotate(7deg); position: absolute; top: 65%; right: -100%;}
-#contact .con-info li{font-size: 4.5rem; line-height: 1.5;}
-
-
+#contact .con-info{background: #000; color: #fff; position: absolute; font-size: 4rem; line-height: 1.5; letter-spacing: 1px;}
+#contact .con-info li:nth-child(2n){border-top: 1px solid #fff;}
+#contact .info-t{top: 55%; right: -105%; transform: rotate(7deg); padding: 0.5% 45% 0.5% 2%;}
+#contact .info-b{top: 77%; left: -105%; transform: rotate(-4deg); padding: 0.5% 2% 0.5% 45%; text-align: right;}
 
 
 
@@ -114,6 +115,8 @@ body.on{background: #000; color: #fff;}
 @media screen and (max-width: 1620px) {
     #cover .titles h1{font-size: 18rem;}
     #cover .title3 .border{font-size: 22rem;}
+
+    #project .pj-planet .pj-link{width: 55rem; height: 55rem;}
 }
 
 @media screen and (max-width: 1500px) {
@@ -122,6 +125,18 @@ body.on{background: #000; color: #fff;}
     #cover .title3 .border{font-size: 19rem;}
 
     #about .title h2{font-size: 18rem;}
+
+    #project .pj-info{font-size: 2.2rem;}
+    #project .pj-planet .pj-link{width: 50rem; height: 50rem;}
+    #project .pj-title .title{font-size: 13rem;}
+    #project .pj-title .sub{font-size: 1.6rem;}
+}
+
+@media screen and (max-width: 1400px) {
+    #project .pj-planet .pj-link{width: 45rem; height: 45rem;}
+
+    #contact .contact{font-size: 13.5rem;}
+    #contact .con-infos{font-size: 4rem;}
 }
 
 @media screen and (max-width: 1300px) {
@@ -131,11 +146,31 @@ body.on{background: #000; color: #fff;}
     #cover .header{font-size: 2.8rem;}
 
     #about .title h2{font-size: 15rem;}
+    #about .info{font-size: 2.7rem;}
+
+    #main{height: 550vh;}
+    #project{height: 110vh;}
+    #project .pj-wrap{padding: 5% 0;}
+    #project .pj-info{font-size: 2rem;}
+    #project .pj-planet .pj-link{width: 40rem; height: 40rem;}
+    #project .pj-title .title{font-size: 11rem;}
+    #project .pj-title .sub{font-size: 1.4rem;}
+
+    #contact .contact{font-size: 12rem;}
+    #contact .con-info{font-size: 3.5rem;}
 }
 
 @media screen and (max-width: 1150px) {
     #cover .container{padding: 12% 7% 30%;}
     #cover .title1, #cover .title2, #cover .title3{background: none;}
+
+    #project .pj-info{font-size: 1.8rem;}
+    #project .pj-planet .pj-link{width: 35rem; height: 35rem;}
+    #project .pj-title .title{font-size: 10rem;}
+    #project .pj-title .sub{font-size: 1.2rem;}
+
+    #contact .contact{font-size: 10.5rem;}
+    #contact .con-info{font-size: 3rem;}
 }
 
 @media screen and (max-width: 1000px) {
@@ -145,6 +180,15 @@ body.on{background: #000; color: #fff;}
     #cover .header .project-btn, .contact-btn{height: 58%;}
 
     #about .title h2{font-size: 14rem;}
+    #about .info{font-size: 2.5rem;}
+
+    #project .pj-planet{background-position-x: 110%; background-size: 75%;}
+    #project .pj-planet .pj-link{width: 33rem; height: 33rem;}
+    #project .pj-title .title{font-size: 9rem;}
+
+    #contact .contact{font-size: 10rem; padding-left: 20%;}
+    #contact .info-t{padding-right: 30%;}
+    #contact .info-b{padding-left: 30%;}
 }
 
 @media screen and (max-width: 855px) {
@@ -154,42 +198,116 @@ body.on{background: #000; color: #fff;}
     #cover .header .project-btn, .contact-btn{height: 58%;}
 
     #about .title h2{font-size: 12rem;}
+    #about .info{font-size: 2rem; height: 15%;}
+
+    #project .pj-planet .pj-link{width: 30rem; height: 30rem;}
+    #project .pj-title .title{font-size: 8.5rem;}
+}
+
+@media screen and (max-width: 750px) {
+    #about .title h2{font-size: 14rem;}
+    #about .title .tit-t{text-align: center; width: 90%; padding-right: 5%;}
+    #about .title .tit-b{display: none;}
+
+    #project .pj-wrap{height: 90%;}
+    #project .pj-planet{height: 65%; padding: 20% 0; background-position-x: 0; background-size: 100%;}
+    #project .pj-planet .pj-link{position: static; transform: none; width: 35rem; height: 35rem; margin: 0 auto;}
+    #project .pj-title{height: 35%; position: static; transform: none; text-align: center;}
+    #project .pj-title .title{padding-left: 0; margin-bottom: 10%;}
+    #project .pj-title .title .num{position: static;}
+    #project .pj-title .sub{width: 100%; margin: 3% auto; font-size: 2.2rem;}
+    #project .pj-title .sub::before{display: none;}
+    #project .pj-title .sub .bar{display: inline-block;}
 }
 
 @media screen and (max-width: 720px) {
-    #cover .container{padding: 20% 3% 15%; background: url(../img/svg/star01.svg) no-repeat 85% 8%;}
+    #cover, #about{height: 100vh;}
+    #cover .container{padding: 20% 3% 0%; background: url(../img/svg/star01.svg) no-repeat 85% 8%;}
     #cover .titles{height: 60%; padding-top: 7%; padding-bottom: 10%;}
     #cover .titles h1{line-height: 1.5;}
     #cover .title1, #cover .title2, #cover .title3{transform: rotate(40deg);  text-align: center;}
     #cover .title3{padding-top: 2rem;}
     #cover .title3 .border{font-size: 11rem;}
-    #cover .header{width: 35%; height: auto; margin: 0 auto; flex-wrap: wrap; justify-content: space-around;}
+    #cover .header{width: 35%; height: auto; margin: 5% auto 0; flex-wrap: wrap; justify-content: space-around;}
 
-    #about .title .tit-t{text-align: center; font-size: 15rem;}
-    #about .title .tit-b{display: none;}
+    #about .container{padding: 12% 5% 5%;}
+    #about .title{height: 35%;}
+    #about .info{flex-wrap: wrap; height: 50%; margin-top: 10%;}
+    #about .info ul{width: 90%; margin: 0 auto;}
+    #about .info ul li{height: 22%;}
+    #about .info .info-r{margin-top: 7%;}
+    #about .info-r li:not(:first-child){text-align: center;}
+
+    #main .scroll{display: none;}
+    #project{width: 100%; height: 100vh;}
+    #project .pj-info .name{display: none;}
+    #project .pj-planet .pj-link{width: 33rem; height: 33rem;}
+    #project .pj-title .title{font-size: 8rem;}
 }
 
 @media screen and (max-width: 655px) {
-    #cover .container{padding: 25% 3% 30%; background-size: 18%;}
+    #cover .container{padding: 25% 3% 0%; background-size: 18%;}
     #cover .titles h1{font-size: 8rem;}
     #cover .title3 .border{font-size: 9rem;}
+
+    #about .title h2{font-size: 12rem;}
+    #about .title .tit-t{width: 95%;}
+
+    #project .pj-planet{height: 70%; padding: 16% 0; background: url(../img/svg/ring-s.svg) no-repeat center center / 100%;}
+    #project .pj-planet .pj-link{width: 40rem; height: 40rem;}
+    #project .pj-title .title{font-size: 7rem; margin-bottom: 5%;}
+    #project .pj-title .sub{margin: 2% auto;}
+}
+
+@media screen and (max-width: 655px) {
+    #project .pj-planet{padding: 25% 0;}
+    #project .pj-planet .pj-link{width: 35rem; height: 35rem;}
+    #project .pj-title .title{font-size: 6rem;}
 }
 
 @media screen and (max-width: 515px) {
     #cover .titles h1{font-size: 7rem;}
     #cover .title3 .border{font-size: 8rem;}
+
+    #about .title h2{font-size: 11rem;}
+
+    #project .pj-planet{padding: 33% 0;}
+    #project .pj-planet .pj-link{width: 30rem; height: 30rem;}
+    #project .pj-title{height: 30%;}
+    #project .pj-title .title{font-size: 6.5rem;}
+    #project .pj-title .title .num{display: block; width: 100%;}
+    #project .pj-title .sub{font-size: 1.8rem;}
 }
 
-@media screen and (max-width: 450px) {
-    #cover .container{padding-bottom: 40%;}
+@media screen and (max-width: 470px) {
+    #cover .container{padding: 33% 3% 0%; background-size: 22%;}
     #cover .title1, #cover .title2, #cover .title3{transform: rotate(45deg);  text-align: center;}
     #cover .titles h1{font-size: 6rem; line-height: 2.0;}
     #cover .title3 .border{font-size: 7rem;}
+
+    #about .title h2{font-size: 10rem;}
+
+    #project .pj-info{font-size: 2.2rem; text-align: center;}
+    #project .pj-info .date{width: 100%;}
+    #project .pj-info .lan{display: none;}
+    #project .pj-planet{padding: 47% 0;}
+    #project .pj-planet .pj-link{width: 25rem; height: 25rem;}
+    #project .pj-title .title{font-size: 5.5rem;}
+    #project .pj-title .title .num{font-size: 2rem;}
+    #project .pj-title .sub{font-size: 1.6rem;}
 }
 
-@media screen and (max-width: 385px) {
-    #cover .container{padding-bottom: 55%;}
+@media screen and (max-width: 400px) {
+    #cover .container{padding: 40% 3% 0%;}
     #cover .titles h1{font-size: 5rem;}
     #cover .title3 .border{font-size: 6rem;}
-    #cover .header{font-size: 2.2rem}
+    #cover .header .contact-btn{margin-top: 10%;}
+
+    #about .title h2{font-size: 8rem;}
+    #about .info ul{width: 100%;}
+    #about .info-l li{letter-spacing: 0;}
+    #about .info-r li:not(:first-child){font-size: 1.8rem;}
+
+    #project .pj-planet{padding: 50% 0;}
+    #project .pj-title .title{font-size: 5rem;}
 }
